--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,62 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    background-color: aliceblue;
+}
+
+p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.navbar {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+#logo {
+    height: 35px;
+    margin: 10px;
+}
+
+#carrusel {
+    max-width: 500px;
+    justify-content: center;
+    align-items: center;
+}
+
+.social {
+    /*border:1px solid #000;*/
+    top: 50%;
+    /*para poner height 192 deberíamos haber indicado en el reset de estilos font-size:0;*/
+}
+
+.img-social {
+    height: 48px;
+}
+
+.bg-light {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+footer {
+    margin-bottom: 10px;
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+}
+
+.top-10 {
+    padding-top: 10px;
+}
+
+.error {
+    height: 0px;
+}
+
+.padding {
+    background-color: lightgreen;
+    background-clip: padding-box;
+}
