--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-header></app-header>
-<app-aside></app-aside>
-<app-home></app-home>
-<app-login></app-login>
-<app-registro></app-registro>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
