--- a/src/app/compartida/header/header.component.html
+++ b/src/app/compartida/header/header.component.html
@@ -11,14 +11,15 @@
                         <img src="../../../assets/img/logo.png" id="logo">
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+
+                        <a class="nav-link active" routerLinkActive="active" aria-current="page" routerLink="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="construccion.html">Productos</a>
+                        <a class="nav-link" routerLinkActive="active" routerLink="/404">Productos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <a class="btn btn-primary" href="login.html"> Ingresar</a>
+                    <a class="btn btn-primary" routerLinkActive="active" routerLink="/ingresar"> Ingresar</a>
                 </form>
 
             </div>
