--- a/src/app/general/login/login.component.html
+++ b/src/app/general/login/login.component.html
@@ -23,7 +23,7 @@
                         <button id="ingresar" type="submit" name="ingresar" class="btn btn-info btn-lg btn-block" value="Ingresar">Ingresar</button>
 
                         <div id="register-link" class="text-right form-group">
-                            <a href="registro.html" class="text-info">Registrar</a>
+                            <a routerLinkActive="active" routerLink="/registrar" class="text-info">Registrar</a>
                         </div>
 
                     </form>
