--- a/src/app/general/registro/registro.component.html
+++ b/src/app/general/registro/registro.component.html
@@ -33,7 +33,7 @@
                             <p id="errorApellido" class="error"> </p>
                         </div>
                         <div class="form-group div-top">
-                            <button id="send" type="submit" name="submit" class="btn btn-info btn-md boton-top">Registrar</button>
+                            <button id="btn-registrar" type="submit" name="submit" class="btn btn-info btn-md btn-block boton-top">Registrar</button>
                         </div>
                     </div>
                 </div>
@@ -41,5 +41,5 @@
         </div>
     </div>
 </div>
-<hr>
+
 <!-- FIN DEL REGISTRO -->
