--- a/src/app/general/login/login.component.html
+++ b/src/app/general/login/login.component.html
@@ -18,9 +18,9 @@
                             <input id="pass" type="password" name="password" class="form-control">
                         </div>
 
-                        <br>
 
-                        <button id="ingresar" type="submit" name="ingresar" class="btn btn-info btn-lg btn-block" value="Ingresar">Ingresar</button>
+
+                        <button id="btn-ingresar" type="submit" name="ingresar" class="btn btn-info btn-lg btn-block" value="Ingresar">Ingresar</button>
 
                         <div id="register-link" class="text-right form-group">
                             <a routerLinkActive="active" routerLink="/registrar" class="text-info">Registrar</a>
@@ -32,5 +32,5 @@
         </div>
     </div>
 </div>
-<hr>
+
 <!-- FIN DEL LOGIN -->
