--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 * {
     background-color: aliceblue;
+    background-clip: border-box;
+    background-clip: padding-box;
 }
 
 p {
@@ -41,7 +43,8 @@ p {
 }
 
 footer {
-    margin-bottom: 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     position: absolute;
     width: 100%;
     height: 100px;
@@ -63,4 +66,14 @@ footer {
 
 .me-auto {
     margin-right: auto!important;
+}
+
+#btn-ingresar {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#btn-registrar {
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
