--- a/src/app/compartida/header/header.component.html
+++ b/src/app/compartida/header/header.component.html
@@ -17,6 +17,9 @@
                     <li class="nav-item">
                         <a class="nav-link" routerLinkActive="active" routerLink="/404">Productos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLinkActive="active" routerLink="/pruebas">Pruebas</a>
+                    </li>
                 </ul>
                 <form class="d-flex">
                     <a class="btn btn-primary" routerLinkActive="active" routerLink="/ingresar"> Ingresar</a>
