--- a/src/app/general/login/login.component.html
+++ b/src/app/general/login/login.component.html
@@ -6,24 +6,22 @@
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12 margin-bottom">
-                    <form id="login-form" class="form" action="" method="post">
-                        <h3 class="text-center text-info"></h3>
-                        <div class="form-group">
-                            <label for="email" class="text-info">Email:</label><br>
-                            <input id="email" type="text" name="email" id="email" class="form-control">
+                    <form (ngSubmit)="insertar()" class="form">
+                        <h3 class="text-center text-info "></h3>
+                        <div class="form-group ">
+                            <label for="email " class="text-info ">Email:</label><br>
+                            <input [(ngModel)]="email" name="email" id="email " type="text " name="email " id="email " class="form-control ">
                         </div>
 
-                        <div class="form-group">
-                            <label for="password" class="text-info">Contraseña:</label><br>
-                            <input id="pass" type="password" name="password" class="form-control">
+                        <div class="form-group ">
+                            <label for="password " class="text-info ">Contraseña:</label><br>
+                            <input [(ngModel)]="password " name="password " id="pass " type="password " name="password " class="form-control ">
                         </div>
 
+                        <button id="btn-ingresar " type="submit " name="ingresar " class="btn btn-info btn-lg btn-block " value="Ingresar ">Ingresar</button>
 
-
-                        <button id="btn-ingresar" type="submit" name="ingresar" class="btn btn-info btn-lg btn-block" value="Ingresar">Ingresar</button>
-
-                        <div id="register-link" class="text-right form-group">
-                            <a routerLinkActive="active" routerLink="/registrar" class="text-info">Registrar</a>
+                        <div id="register-link " class="text-right form-group ">
+                            <a routerLinkActive="active " routerLink="/registrar" class="text-info ">Registrar</a>
                         </div>
 
                     </form>
