--- a/src/app/compartida/footer/footer.component.html
+++ b/src/app/compartida/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="page-footer font-small blue">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2021 Copyright:
+    <div id="footer" class="footer-copyright text-center py-3">© 2021 Copyright:
         <a href="https://mdbootstrap.com/"> Yeison Avila Gonzalez</a>
     </div>
     <!-- Copyright -->
