--- a/src/app/general/login/login.component.html
+++ b/src/app/general/login/login.component.html
@@ -14,8 +14,8 @@
                         </div>
 
                         <div class="form-group ">
-                            <label for="password " class="text-info ">Contraseña:</label><br>
-                            <input [(ngModel)]="password " name="password " id="pass " type="password " name="password " class="form-control ">
+                            <label for="password" class="text-info ">Contraseña:</label><br>
+                            <input [(ngModel)]="password" name="password" id="password" type="password" name="password" class="form-control ">
                         </div>
 
                         <button id="btn-ingresar " type="submit " name="ingresar " class="btn btn-info btn-lg btn-block " value="Ingresar ">Ingresar</button>
