--- a/src/app/compartida/header/header.component.html
+++ b/src/app/compartida/header/header.component.html
@@ -15,7 +15,7 @@
                         <a class="nav-link active" routerLinkActive="active" aria-current="page" routerLink="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/404">Productos</a>
+                        <a class="nav-link" routerLinkActive="active" routerLink="/productos">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" routerLinkActive="active" routerLink="/pruebas">Pruebas</a>
